--- a/app/src/main/res/layout/chat_page.xml
+++ b/app/src/main/res/layout/chat_page.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:padding="10dip"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#EAEDD1"
+    >
 
     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:id="@+id/app_bar_id"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
     </android.support.v7.widget.Toolbar>
     <ProgressBar
         android:layout_width="36dp"
@@ -31,6 +36,7 @@
             android:layout_alignParentBottom="true"
              android:layout_height="wrap_content"
             android:visibility="gone"
+            android:background="#FFFFFF"
             android:id="@+id/msgPageLayout">
 
         <EditText
